--- a/Vienna/Resources/lt.lproj/Localizable.strings
+++ b/Vienna/Resources/lt.lproj/Localizable.strings
@@ -108,6 +108,9 @@
 "Click the Open button to open this file." = "Spustelkite ant mygtuko Atidaryti, kad atvertumėte failą.";
 
 /* No comment provided by engineer. */
+"Click the Play button to play this enclosure in iTunes." = "Spustelkite ant mygtuko Paleisti, kad peržiūrėtumėte programoje iTunes.";
+
+/* No comment provided by engineer. */
 "Connecting to %@" = "Jungiamasi prie %@";
 
 /* No comment provided by engineer. */
@@ -449,6 +452,9 @@
 
 /* No comment provided by engineer. */
 "Other" = "Kita";
+
+/* No comment provided by engineer. */
+"Play" = "Paleisti";
 
 /* No comment provided by engineer. */
 "Plugin installed" = "Įskiepis įdiegtas";
