--- a/Vienna/Resources/ru.lproj/Localizable.strings
+++ b/Vienna/Resources/ru.lproj/Localizable.strings
@@ -120,6 +120,9 @@
 "Click the Open button to open this file." = "Нажмите кнопку Открыть для открытия файла.";
 
 /* No comment provided by engineer. */
+"Click the Play button to play this enclosure in iTunes." = "Нажмите кнопку Воспроизведение , для проигрывания в iTunes.";
+
+/* No comment provided by engineer. */
 "Connecting to %@" = "Соединяюсь с %@";
 
 /* No comment provided by engineer. */
@@ -464,6 +467,9 @@
 
 /* No comment provided by engineer. */
 "Other" = "Иное";
+
+/* No comment provided by engineer. */
+"Play" = "Воспроизведение";
 
 /* No comment provided by engineer. */
 "Plugin installed" = "Плагин установлен";
