--- a/Vienna/Resources/fr.lproj/Localizable.strings
+++ b/Vienna/Resources/fr.lproj/Localizable.strings
@@ -4,9 +4,6 @@
 /* No comment provided by engineer. */
 "(Untitled Feed)" = "(flux sans nom)";
 
-/* Appended to application name in Open With menu */
-"%@ (default)" = "%@ (par défaut)";
-
 /* No comment provided by engineer. */
 "%@ Info" = "Infos sur %@";
 
@@ -15,9 +12,6 @@
 
 /* Number of bytes received, e.g. 1 MB received */
 "%@ received" = "%@ reçu";
-
-/* {existing authors}, {new author name} */
-"%@, %@" = "%1$@, %2$@";
 
 /* No comment provided by engineer. */
 "%d new articles retrieved" = "%d nouveaux articles récupérés";
@@ -111,7 +105,7 @@
 "Cannot create export output file" = "Exportation impossible";
 
 /* No comment provided by engineer. */
-"Cannot create folder" = "Vienna ne peut pas créer le dossier";
+"Cannot create folder" = "Vienna ne peut pas créer le dossier.";
 
 /* No comment provided by engineer. */
 "Cannot create the Vienna database" = "Création de la base de données Vienna impossible";
@@ -127,6 +121,9 @@
 
 /* No comment provided by engineer. */
 "Click the Open button to open this file." = "Presser le bouton Ouvrir pour ouvrir ce fichier.";
+
+/* No comment provided by engineer. */
+"Click the Play button to play this enclosure in iTunes." = "Presser le bouton Lire pour jouer ce fichier incorporé dans iTunes.";
 
 /* No comment provided by engineer. */
 "Connecting to %@" = "Connexion à %@";
@@ -199,10 +196,10 @@
 "Download completed" = "Téléchargement réussi";
 
 /* Title of a menu item */
-"Download Enclosure" = "Télécharger le fichier joint";
+"Download Enclosure" = "Télécharger le fichier incorporé";
 
 /* Title of a menu item */
-"Download Enclosures" = "Télécharger les fichiers joints";
+"Download Enclosures" = "Télécharger les fichiers incorporés";
 
 /* Notification title */
 "Download failed" = "Téléchargement non réussi";
@@ -214,10 +211,10 @@
 "Empty" = "Vider";
 
 /* Data field name (Y/N) visible in menu/smart folder definition */
-"Enclosure" = "Fichier joint";
+"Enclosure" = "Fichier incorporé";
 
 /* Data field name (URL) visible in menu/article list */
-"Enclosure URL" = "URL du fichier joint";
+"Enclosure URL" = "URL du fichier incorporé";
 
 /* No comment provided by engineer. */
 "Enter the URL here" = "Entrer l'URL ici";
@@ -307,7 +304,7 @@
 "HTTP code %d reported from server" = "Code HTTP %d renvoyé par le serveur";
 
 /* No comment provided by engineer. */
-"If you quit Vienna now, all downloads will stop." = "Si vous quittez Vienna maintenant, tous les téléchargements seront interrompus.";
+"If you quit Vienna now, all downloads will stop." = "Voulez-vous interrompre les téléchargements et fermer Vienna maintenant?";
 
 /* Title of a button on an alert */
 "Import" = "Importer";
@@ -472,13 +469,10 @@
 "Open Subscription Home Page in External Browser" = "Afficher la page source de l'abonnement dans le navigateur externe";
 
 /* No comment provided by engineer. */
-"Open With" = "Ouvrir avec";
-
-/* Name the application which should open a file */
-"Open with %@" = "Ouvrir avec %@";
+"Other" = "Autre";
 
 /* No comment provided by engineer. */
-"Other" = "Autre";
+"Play" = "Lire";
 
 /* No comment provided by engineer. */
 "Plugin installed" = "Plugin installé";
@@ -503,7 +497,7 @@
 "Recents" = "Récents";
 
 /* No comment provided by engineer. */
-"Redirection attempt treated as temporary for safety concern" = "Demande de redirection traitée, par mesure de prudence, à titre temporaire";
+"Redirection attempt treated as temporary for safety concern" = "Tentative de redirection traitée de façon temporaire par souci de prudence";
 
 /* Title of a menu item */
 "Refresh All Subscriptions" = "Rafraîchir tous les abonnements";
@@ -608,7 +602,7 @@
 "The \"%@\" folder cannot be created." = "Le dossier \"%@\" ne peut pas être créé.";
 
 /* No comment provided by engineer. */
-"The database (%@) file format is not supported by this version of Vienna. Delete or rename the file and restart Vienna." = "Votre base de données (%@) n'est pas reconnue par cette version de Vienna. Supprimez ou renommez ce fichier et relancez Vienna.";
+"The database (%@) file format is not supported by this version of Vienna. Delete or rename the file and restart Vienna." = "Votre fichier %@ n'est pas reconnu par cette version de Vienna. Supprimez ou renommez ce fichier et relancez Vienna.";
 
 /* No comment provided by engineer. */
 "The database file (%@) could not be opened for some reason. It may be corrupted or inaccessible. Please delete or rename the database file and restart Vienna." = "La base de données (%@) ne peut être ouverte. Elle pourrait être corrompue ou inaccessible. S'il vous plait, effacez ou renommez la base de données et relancez Vienna.";
@@ -629,7 +623,7 @@
 "The style %@ appears to be missing or corrupted" = "Le style %@ semble être corrompu";
 
 /* No comment provided by engineer. */
-"The subscription for \"%@\" requires a user name and password for access." = "L'abonnement à \"%@\" nécessite un nom d'utilisateur et un mot de passe.";
+"The subscription for \"%@\" requires a user name and password for access." = "L'abonnement à '%@' nécessite un nom d'utilisateur et un mot de passe.";
 
 /* No comment provided by engineer. */
 "This article contains an enclosed file." = "Cet article contient un fichier incorporé.";
@@ -686,7 +680,7 @@
 "Vienna must upgrade its database to the latest version. This may take a minute or so. We apologize for the inconvenience." = "Vienna doit effectuer une mise à jour de sa base de données. Cela peut prendre une minute ou plus. Merci de votre compréhension.";
 
 /* No comment provided by engineer. */
-"Vienna was trying to create the folder \"%@\" but an error occurred. Check the permissions on the folders on the path specified." = "Vienna a essayé de créer le dossier '%@' mais une erreur est apparue. Vérifiez les autorisations des dossiers sur le chemin indiqué.";
+"Vienna was trying to create the folder \"%@\" but an error occurred. Check the permissions on the folders on the path specified." = "Vienna a essyé de créer le dossier '%@' mais une erreur est apparue. Vérifiez les authorisations des dossiers sur le chemin indiqué.";
 
 /* No comment provided by engineer. */
 "Yes" = "Oui";
