--- a/Vienna/Resources/gl.lproj/Localizable.strings
+++ b/Vienna/Resources/gl.lproj/Localizable.strings
@@ -114,6 +114,9 @@
 "Click the Open button to open this file." = "Faga clic no botón Abrir para abrir este arquivo.";
 
 /* No comment provided by engineer. */
+"Click the Play button to play this enclosure in iTunes." = "Faga clic no botón Reproducir para reproducir este arquivo adxunto en iTunes.";
+
+/* No comment provided by engineer. */
 "Connecting to %@" = "Conectando con %@";
 
 /* No comment provided by engineer. */
@@ -449,6 +452,9 @@
 
 /* No comment provided by engineer. */
 "Other" = "Outro";
+
+/* No comment provided by engineer. */
+"Play" = "Reproducir";
 
 /* No comment provided by engineer. */
 "Plugin installed" = "Plugin instalado";
