--- a/Vienna/Resources/nl.lproj/Localizable.stringsdict
+++ b/Vienna/Resources/nl.lproj/Localizable.stringsdict
@@ -13,7 +13,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%d nieuw artikel opgehaald</string>
+			<string>%d new article retrieved</string>
 			<key>other</key>
 			<string>%d nieuwe artikelen opgehaald</string>
 		</dict>
@@ -29,7 +29,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%d abonnement geëxporteerd</string>
+			<string>%d subscription successfully exported</string>
 			<key>other</key>
 			<string>%d abonnementen geëxporteerd</string>
 		</dict>
@@ -45,7 +45,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%d abonnement geïmporteerd</string>
+			<string>%d subscription successfully imported</string>
 			<key>other</key>
 			<string>%d abonnementen geïmporteerd</string>
 		</dict>
@@ -61,7 +61,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%d ongelezen artikel</string>
+			<string>%d unread article</string>
 			<key>other</key>
 			<string>%d ongelezen artikelen</string>
 		</dict>
@@ -77,7 +77,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>u</string>
 			<key>one</key>
-			<string>%u artikel</string>
+			<string>%u article</string>
 			<key>other</key>
 			<string>%u artikelen</string>
 		</dict>
