--- a/Vienna/Resources/zh-Hans.lproj/Localizable.strings
+++ b/Vienna/Resources/zh-Hans.lproj/Localizable.strings
@@ -117,6 +117,9 @@
 "Click the Open button to open this file." = "点击开启按钮来开启文件";
 
 /* No comment provided by engineer. */
+"Click the Play button to play this enclosure in iTunes." = "点击播放按钮来通过 iTunes 来播放这个附带文件。";
+
+/* No comment provided by engineer. */
 "Connecting to %@" = "正在连接到 %@";
 
 /* No comment provided by engineer. */
@@ -446,6 +449,9 @@
 
 /* No comment provided by engineer. */
 "Other" = "其他";
+
+/* No comment provided by engineer. */
+"Play" = "播放";
 
 /* Title of a button on an alert */
 "Quit" = "退出";
